--- a/style.css
+++ b/style.css
@@ -1,39 +1,32 @@
 body {
-  font-family: 'Outfit', sans-serif;
+  background: #0575e6; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #021b79,
+    #0575e6
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #021b79,
+    #0575e6
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  background-repeat: no-repeat;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  background-color: #e7e7e7;
+  font-family: Oxygen, sans-serif;
 }
 
-.container {
-  background-color: #fff;
-  max-width: 400px;
-  border-radius: 8px;
-  height: auto;
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.3);
-  padding: 40px;
+h4 {
+  color: aqua;
 }
-
-h1 {
-  text-align: center;
-}
-
-.btn {
-  padding: 8px 20px;
-  border: 2px solid #333;
-  font-family: inherit;
-  font-size: 1rem;
-  border-radius: 8px;
-  text-transform: uppercase;
+button {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: skyblue;
+  border: 1px solid darkblue;
   cursor: pointer;
-  transition: all 0.2s;
-}
-
-.btn:hover {
-  background: #333;
-  color: #fff;
-  box-shadow: 0 1rem 7rem rgba(0, 0, 0, 0.2);
 }
